--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sandwich-go/jsb",
-  "version": "0.1.58",
+  "version": "0.1.59",
   "main": "index.js",
   "description": "JavaScript boost lib",
   "scripts": {
@@ -47,6 +47,7 @@
   ],
   "dependencies": {
     "buffer": "^6.0.3",
+    "clipboard": "^2.0.11",
     "moment": "^2.29.4"
   }
 }
