--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "clipboard": "^2.0.11",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "sass-loader": "7.1.0"
   }
 }
