--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@sandwich-go/jsb",
-  "version": "0.1.182",
+  "name": "@cg-devcenter/jsb",
+  "version": "0.1.183",
   "main": "index.js",
   "description": "JavaScript boost lib",
   "scripts": {
