--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cg-devcenter/jsb",
-  "version": "0.1.185",
+  "version": "0.1.186",
   "main": "index.js",
   "description": "JavaScript boost lib",
   "scripts": {
@@ -9,7 +9,8 @@
     "lib": "gulp build",
     "format": "eslint --fix dist/*.ts",
     "test": "npm run lib && jest",
-    "release": "yarn version --new-version patch && gulp build"
+    "release": "yarn version --new-version patch && gulp build",
+    "publish:local": "yarn lib && yalc publish"
   },
   "publishConfig": {
     "access": "public"
@@ -24,6 +25,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "gulp": "^4.0.2",
     "gulp-replace": "^1.1.4",
+    "jest": "^30.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
